complete code in TP4

--- a/TP4/code/notebook/tp4.ipynb
+++ b/TP4/code/notebook/tp4.ipynb
@@ -46,11 +46,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\oussa\\AppData\\Local\\Temp\\ipykernel_20584\\3203507159.py:3: UserWarning: \n",
+      "C:\\Users\\oussa\\AppData\\Local\\Temp\\ipykernel_24528\\3203507159.py:3: UserWarning: \n",
       "The dash_html_components package is deprecated. Please replace\n",
       "`import dash_html_components as html` with `from dash import html`\n",
       "  import dash_html_components as html\n",
-      "C:\\Users\\oussa\\AppData\\Local\\Temp\\ipykernel_20584\\3203507159.py:4: UserWarning: \n",
+      "C:\\Users\\oussa\\AppData\\Local\\Temp\\ipykernel_24528\\3203507159.py:4: UserWarning: \n",
       "The dash_core_components package is deprecated. Please replace\n",
       "`import dash_core_components as dcc` with `from dash import dcc`\n",
       "  import dash_core_components as dcc\n"
@@ -824,18 +824,10 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dash app running on http://127.0.0.1:8051/\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Use this cell to check your answer\n",
-    "app.run_server(port=8051)"
+    "# app.run_server(port=8051)"
    ]
   },
   {
@@ -871,30 +863,40 @@
     "@app.callback(\n",
     "    [Output('country', 'children'), Output('2000-gdp', 'children'), Output('2000-co2', 'children'), Output('2015-gdp', 'children'), Output('2015-co2', 'children')],\n",
     "    [Input('fig-2000', 'hoverData'), Input('fig-2015', 'hoverData')],\n",
-    "    [State('country', 'children'), State('2000-gdp', 'children'), State('2000-co2', 'children'), State('2015-gdp', 'children'), State('2015-co2', 'children')])\n",
+    "    [State('country', 'children'), State('2000-gdp', 'children'), State('2000-co2', 'children'), State('2015-gdp', 'children'), State('2015-co2', 'children')]\n",
+    ")\n",
     "def display_selected_data(hoverData2000, hoverData2015, prevCountry, prevgdp0, prevco20, prevgdp5, prevco25):\n",
-    "    if hoverData2000:\n",
-    "        point = hoverData2000['points'][0]\n",
-    "        country = point['hovertext']\n",
-    "        gdp_2000 = df_2000[df_2000['Country Name'] == country]['GDP'].values[0]\n",
-    "        co2_2000 = df_2000[df_2000['Country Name'] == country]['CO2'].values[0]\n",
-    "        gdp_2015 = df_2015[df_2015['Country Name'] == country]['GDP'].values[0]\n",
-    "        co2_2015 = df_2015[df_2015['Country Name'] == country]['CO2'].values[0]\n",
-    "    elif hoverData2015:\n",
-    "        point = hoverData2015['points'][0]\n",
-    "        country = point['hovertext']\n",
-    "        gdp_2000 = df_2000[df_2000['Country Name'] == country]['GDP'].values[0]\n",
-    "        co2_2000 = df_2000[df_2000['Country Name'] == country]['CO2'].values[0]\n",
-    "        gdp_2015 = df_2015[df_2015['Country Name'] == country]['GDP'].values[0]\n",
-    "        co2_2015 = df_2015[df_2015['Country Name'] == country]['CO2'].values[0]\n",
-    "    else:\n",
-    "        country = prevCountry\n",
-    "        gdp_2000 = prevgdp0\n",
-    "        co2_2000 = prevco20\n",
-    "        gdp_2015 = prevgdp5\n",
-    "        co2_2015 = prevco25\n",
+    "    try:\n",
+    "        if hoverData2000:\n",
+    "            point = hoverData2000['points'][0]\n",
+    "            country = point['hovertext']\n",
+    "            gdp_2000 = df_2000[df_2000['Country Name'] == country]['GDP'].values[0] if not df_2000[df_2000['Country Name'] == country].empty else None\n",
+    "            co2_2000 = df_2000[df_2000['Country Name'] == country]['CO2'].values[0] if not df_2000[df_2000['Country Name'] == country].empty else None\n",
+    "            gdp_2015 = df_2015[df_2015['Country Name'] == country]['GDP'].values[0] if not df_2015[df_2015['Country Name'] == country].empty else None\n",
+    "            co2_2015 = df_2015[df_2015['Country Name'] == country]['CO2'].values[0] if not df_2015[df_2015['Country Name'] == country].empty else None\n",
+    "        elif hoverData2015:\n",
+    "            point = hoverData2015['points'][0]\n",
+    "            country = point['hovertext']\n",
+    "            gdp_2000 = df_2000[df_2000['Country Name'] == country]['GDP'].values[0] if not df_2000[df_2000['Country Name'] == country].empty else None\n",
+    "            co2_2000 = df_2000[df_2000['Country Name'] == country]['CO2'].values[0] if not df_2000[df_2000['Country Name'] == country].empty else None\n",
+    "            gdp_2015 = df_2015[df_2015['Country Name'] == country]['GDP'].values[0] if not df_2015[df_2015['Country Name'] == country].empty else None\n",
+    "            co2_2015 = df_2015[df_2015['Country Name'] == country]['CO2'].values[0] if not df_2015[df_2015['Country Name'] == country].empty else None\n",
+    "        else:\n",
+    "            country = prevCountry\n",
+    "            gdp_2000 = prevgdp0\n",
+    "            co2_2000 = prevco20\n",
+    "            gdp_2015 = prevgdp5\n",
+    "            co2_2015 = prevco25\n",
     "\n",
-    "    return country, f'{gdp_2000:.2f}', f'{co2_2000:.2f}', f'{gdp_2015:.2f}', f'{co2_2015:.2f}'"
+    "        gdp_2000 = f'{gdp_2000:.2f}' if gdp_2000 is not None else 'N/A'\n",
+    "        co2_2000 = f'{co2_2000:.2f}' if co2_2000 is not None else 'N/A'\n",
+    "        gdp_2015 = f'{gdp_2015:.2f}' if gdp_2015 is not None else 'N/A'\n",
+    "        co2_2015 = f'{co2_2015:.2f}' if co2_2015 is not None else 'N/A'\n",
+    "\n",
+    "        return country, gdp_2000, co2_2000, gdp_2015, co2_2015\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error: {e}\")\n",
+    "        return prevCountry, prevgdp0, prevco20, prevgdp5, prevco25\n"
    ]
   },
   {
@@ -906,22 +908,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AssertionError",
-     "evalue": "The setup method 'errorhandler' can no longer be called on the application. It has already handled its first request, any changes will not be applied consistently.\nMake sure all imports, decorators, functions, etc. needed to set up the application are done before running it.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[19], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Use this cell to check your answer\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[43mapp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun_server\u001b[49m\u001b[43m(\u001b[49m\u001b[43mport\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m8052\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\Users\\oussa\\Desktop\\OUSSAMA\\Poly_ETE_2024\\INF8808E - Visualisation de données  Data Visualization\\TPs\\INF8808E\\TP4\\.venv\\lib\\site-packages\\jupyter_dash\\jupyter_app.py:285\u001b[0m, in \u001b[0;36mJupyterDash.run_server\u001b[1;34m(self, mode, width, height, inline_exceptions, **kwargs)\u001b[0m\n\u001b[0;32m    282\u001b[0m flask\u001b[38;5;241m.\u001b[39mcli\u001b[38;5;241m.\u001b[39mshow_server_banner \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mlambda\u001b[39;00m \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs: \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m    284\u001b[0m \u001b[38;5;66;03m# Set up custom callback exception handling\u001b[39;00m\n\u001b[1;32m--> 285\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_config_callback_exception_handling\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m    286\u001b[0m \u001b[43m    \u001b[49m\u001b[43mdev_tools_prune_errors\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mdev_tools_prune_errors\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    287\u001b[0m \u001b[43m    \u001b[49m\u001b[43minline_exceptions\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43minline_exceptions\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    288\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    290\u001b[0m \u001b[38;5;66;03m# prevent partial import of orjson when it's installed and mode=jupyterlab\u001b[39;00m\n\u001b[0;32m    291\u001b[0m \u001b[38;5;66;03m# TODO: why do we need this? Why only in this mode? Importing here in\u001b[39;00m\n\u001b[0;32m    292\u001b[0m \u001b[38;5;66;03m# all modes anyway, in case there's a way it can pop up in another mode\u001b[39;00m\n\u001b[0;32m    293\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n",
-      "File \u001b[1;32mc:\\Users\\oussa\\Desktop\\OUSSAMA\\Poly_ETE_2024\\INF8808E - Visualisation de données  Data Visualization\\TPs\\INF8808E\\TP4\\.venv\\lib\\site-packages\\jupyter_dash\\jupyter_app.py:375\u001b[0m, in \u001b[0;36mJupyterDash._config_callback_exception_handling\u001b[1;34m(self, dev_tools_prune_errors, inline_exceptions)\u001b[0m\n\u001b[0;32m    371\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_config_callback_exception_handling\u001b[39m(\n\u001b[0;32m    372\u001b[0m         \u001b[38;5;28mself\u001b[39m, dev_tools_prune_errors, inline_exceptions\n\u001b[0;32m    373\u001b[0m ):\n\u001b[1;32m--> 375\u001b[0m     \u001b[38;5;129m@self\u001b[39m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mserver\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43merrorhandler\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;167;43;01mException\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[0;32m    376\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_wrap_errors\u001b[39m(error):\n\u001b[0;32m    377\u001b[0m \u001b[38;5;250m        \u001b[39m\u001b[38;5;124;03m\"\"\"Install traceback handling for callbacks\"\"\"\u001b[39;00m\n\u001b[0;32m    378\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_traceback \u001b[38;5;241m=\u001b[39m sys\u001b[38;5;241m.\u001b[39mexc_info()[\u001b[38;5;241m2\u001b[39m]\n",
-      "File \u001b[1;32mc:\\Users\\oussa\\Desktop\\OUSSAMA\\Poly_ETE_2024\\INF8808E - Visualisation de données  Data Visualization\\TPs\\INF8808E\\TP4\\.venv\\lib\\site-packages\\flask\\scaffold.py:49\u001b[0m, in \u001b[0;36msetupmethod.<locals>.wrapper_func\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m     48\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mwrapper_func\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;241m*\u001b[39margs: t\u001b[38;5;241m.\u001b[39mAny, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs: t\u001b[38;5;241m.\u001b[39mAny) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m t\u001b[38;5;241m.\u001b[39mAny:\n\u001b[1;32m---> 49\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_check_setup_finished\u001b[49m\u001b[43m(\u001b[49m\u001b[43mf_name\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     50\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m f(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
-      "File \u001b[1;32mc:\\Users\\oussa\\Desktop\\OUSSAMA\\Poly_ETE_2024\\INF8808E - Visualisation de données  Data Visualization\\TPs\\INF8808E\\TP4\\.venv\\lib\\site-packages\\flask\\app.py:722\u001b[0m, in \u001b[0;36mFlask._check_setup_finished\u001b[1;34m(self, f_name)\u001b[0m\n\u001b[0;32m    720\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_check_setup_finished\u001b[39m(\u001b[38;5;28mself\u001b[39m, f_name: \u001b[38;5;28mstr\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    721\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_got_first_request:\n\u001b[1;32m--> 722\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAssertionError\u001b[39;00m(\n\u001b[0;32m    723\u001b[0m             \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThe setup method \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mf_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m can no longer be called\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    724\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m on the application. It has already handled its first\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    725\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m request, any changes will not be applied\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    726\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m consistently.\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    727\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMake sure all imports, decorators, functions, etc.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    728\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m needed to set up the application are done before\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    729\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m running it.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    730\u001b[0m         )\n",
-      "\u001b[1;31mAssertionError\u001b[0m: The setup method 'errorhandler' can no longer be called on the application. It has already handled its first request, any changes will not be applied consistently.\nMake sure all imports, decorators, functions, etc. needed to set up the application are done before running it."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dash app running on http://127.0.0.1:8052/\n"
      ]
     }
    ],
